--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "browser-sync": "^2.26.5",
     "fancybox": "^3.0.1",
+    "gsap": "^2.1.3",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "scrollmagic": "^2.0.7"
   },
   "devDependencies": {
     "gulp-sass": "^4.0.2",
